<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="@dimen/_8dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4dp"
        android:layout_marginTop="@dimen/_8dp"
        android:text="@string/settings_2"
        android:textSize="@dimen/_12sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/port"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_38dp"
        android:layout_marginTop="@dimen/_8dp"
        android:layout_below="@id/title"
        android:maxLines="1"
        android:maxLength="6"
        android:inputType="number"
        android:background="@drawable/port_text"
        android:padding="@dimen/_4dp"
        android:text="@string/default_port" />

    <TextView
        android:id="@+id/hint"
        android:layout_width="match_parent"
        android:layout_below="@id/port"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4dp"
        android:layout_marginTop="@dimen/_2dp"
        android:text="@string/restrictions"
        android:textColor="@color/purple"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_52dp"
        android:layout_below="@id/hint"
        android:layout_marginTop="@dimen/_8dp"
        android:orientation="horizontal"
        android:weightSum="21">
        <Button
            android:id="@+id/save"
            android:layout_width="0dp"
            android:layout_weight="10"
            android:text="@string/save"
            android:textSize="@dimen/_16sp"
            android:layout_height="match_parent" />
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_weight="10"
            android:textSize="@dimen/_16sp"
            android:text="@string/cancel"
            android:layout_height="match_parent" />
    </LinearLayout>
</RelativeLayout>